--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
 	"dependencies": {
 		"@fontsource/pt-sans": "^5.2.8",
 		"@iconoir/vue": "^7.11.0",
-		"@tailwindcss/vite": "^4.1.18",
-		"tailwindcss": "^4.1.18",
+		"less": "^4.5.1",
 		"vue": "^3.5.24"
 	},
 	"devDependencies": {
@@ -28,7 +27,6 @@
 		"@typescript-eslint/parser": "^8.50.0",
 		"@vitejs/plugin-vue": "^6.0.1",
 		"@vue/tsconfig": "^0.8.1",
-		"daisyui": "^5.5.14",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-vue": "^10.6.2",
