Changed homepage path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://simplyrick.github.io/",
+	"homepage": "https://simplyrick.github.io/ricks-portfolio/",
 	"name": "ricks-portfolio",
 	"private": true,
 	"version": "0.0.0",
