GitHub Pages Update: added package and configurations

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"preview": "vite preview",
 		"lint": "eslint --ext .ts,.tsx,.vue src",
 		"format": "prettier --write .",
-		"check-format": "prettier --check ."
+		"check-format": "prettier --check .",
+		"deploy": "npm run build && gh-pages -d dist"
 	},
 	"dependencies": {
 		"@fontsource/pt-sans": "^5.2.8",
@@ -31,6 +32,7 @@
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-vue": "^10.6.2",
+		"gh-pages": "^6.3.0",
 		"prettier": "^3.7.4",
 		"typescript": "~5.9.3",
 		"vite": "^7.2.4",
