Add vue router, views, global stylings

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"@fontsource/pt-sans": "^5.2.8",
 		"@iconoir/vue": "^7.11.0",
 		"less": "^4.5.1",
-		"vue": "^3.5.24"
+		"vue": "^3.5.24",
+		"vue-router": "^4.6.4"
 	},
 	"devDependencies": {
 		"@types/node": "^24.10.1",
