--- a/configs/tsconfig.app.json
+++ b/configs/tsconfig.app.json
@@ -3,8 +3,9 @@
 	"compilerOptions": {
 		"tsBuildInfoFile": "../node_modules/.tmp/tsconfig.app.tsbuildinfo",
 		"types": ["vite/client"],
+		"baseUrl": ".",
 		"paths": {
-			"@/*": ["./src/*"],
+			"@/*": ["src/*"],
 			"@:/*": ["./*"]
 		},
 
