--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["src/*"],
+			"@:/*": ["./*"]
+		}
+	},
 	"files": [],
 	"references": [
 		{ "path": "./configs/tsconfig.app.json" },
