--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"build": "vue-tsc -b && vite build",
 		"preview": "vite preview",
 		"lint": "eslint --ext .ts,.tsx,.vue src",
+		"fix-lint": "eslint --ext .ts,.tsx,.vue src --fix",
 		"format": "prettier --write .",
 		"check-format": "prettier --check .",
 		"deploy": "npm run build && gh-pages -d dist"
